--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ dependencies {
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+  implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
 }
